--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copia-visitas-técnicas",
+  "name": "visitas-tecnicas-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
